# pollster

./: .gitattributes  .gitignore  .prettierrc.mjs  Dockerfile  Earthfile  LICENSE  README.md  alembic.ini  openapi-codegen.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/: index.html
frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
frontend/src/components/: link.tsx  status_cell.tsx
frontend/src/components/util/: router-dev-tools.tsx
frontend/src/lib/: state.ts  utils.ts
frontend/src/queries/: utils.ts
frontend/src/queries/api/: pollsterComponents.ts  pollsterContext.ts  pollsterFetcher.ts  pollsterFunctions.ts  pollsterSchemas.ts
frontend/src/routes/: Home.tsx  __root.tsx  index.lazy.tsx  index.tsx
frontend/src/routes/(app)/: index.tsx
frontend/src/routes/(app)/auth/: login.tsx
frontend/src/routes/(app)/polls/: $pollId.tsx
frontend/src/routes/auth/: login.tsx
frontend/src/routes/polls/: $pollId.tsx
frontend/src/routes/polls/$pollId/: index.tsx  (+3 more)
pollster/: app.py  config.py
pollster/cmd/: __init__.py
pollster/dependencies/: auth.py  database.py
pollster/migrations/: env.py
pollster/migrations/versions/: 38150b2cce0b_create_initial_vote_models.py  56f717a43418_create_vote_model.py  6626d979599d_create_initial_poll_models.py  ad3c2d856b53_add_field_to_allow_opting_in_to_showing_.py
pollster/models/: _all_models.py  poll.py  vote.py
pollster/routers/: __init__.py  auth.py  polls.py  votes.py
pollster/schemas/: __init__.py  polls.py  votes.py
(+5 files in other folders)
